--- a/src/Makefile
+++ b/src/Makefile
@@ -4,11 +4,15 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 .PHONY: clean
 
-libforestclaw.a: forestclaw.o
+libforestclaw.a: forestclaw.o amr_forestclaw.o
 	ar cru $@ $^
 
 .c.o:
 	$(P4EST_CC) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -c $<
+
+.cpp.o:
+	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -I$(FORESTCLAW)/AMRLevel/src -c $<
+
 
 clean:
 	rm -f *.o
