Start example file with main function

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,9 @@
 
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
-.PHONY: clean
+.PHONY: clean examples
+
+examples: example1
 
 libforestclaw.a: amr_forestclaw.o fclaw2d_convenience.o forestclaw2d.o
 	ar cru $@ $^
@@ -12,6 +14,9 @@ libforestclaw.a: amr_forestclaw.o fclaw2d_convenience.o forestclaw2d.o
 
 .cpp.o:
 	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) -I$(FORESTCLAW)/AMRClaw/src -I. -c $<
+
+example1: example1.o libforestclaw.a
+	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(P4EST_LIBS) -o $@
 
 clean:
 	rm -f *.o *.a
