--- a/src/Makefile
+++ b/src/Makefile
@@ -44,7 +44,7 @@ libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils
 	-I$(FORESTCLAW)/AMRClaw/src -I. -c $< -o $@
 
 .f.o:
-	$(FC) -c $< -o $@ -I$(FORESTCLAW)/AMRClaw/src2d
+	$(FC) -Wall -c $< -o $@ -I$(FORESTCLAW)/AMRClaw/src2d
 
 example1: example1.o libforestclaw.a
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
