--- a/src/Makefile
+++ b/src/Makefile
@@ -4,21 +4,26 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 .PHONY: clean examples
 
-examples: example1
-
-amrclawobjs = \
+exampleobjs = \
 	qinit.o \
 	rpn2.o \
 	rpt2.o \
+	setaux.o \
+	setprob.o \
+	b4step2.o \
+	psi.o
+
+
+examples: example1
+
+amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src/philim.o \
 	$(FORESTCLAW)/AMRClaw/src/limiter.o \
 	$(FORESTCLAW)/AMRClaw/src/ClawPatch.o \
 	$(FORESTCLAW)/AMRClaw/src2d/claw2d_utils.o \
 	$(FORESTCLAW)/AMRClaw/src2d/bc2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/ClawPatch2.o \
-	$(FORESTCLAW)/AMRClaw/src2d/setaux.o \
 	$(FORESTCLAW)/AMRClaw/src2d/average2.o \
-	$(FORESTCLAW)/AMRClaw/src2d/b4step2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/cellave2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/estimate_error2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/fdisc.o \
@@ -27,7 +32,6 @@ amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src2d/flux2fw.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mapc2p.o \
 	$(FORESTCLAW)/AMRClaw/src2d/qad2.o \
-	$(FORESTCLAW)/AMRClaw/src2d/setprob.o \
 	$(FORESTCLAW)/AMRClaw/src2d/step2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/src2.o
 
@@ -46,7 +50,7 @@ libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils
 .f.o:
 	$(FC) -Wall -c $< -o $@ -I$(FORESTCLAW)/AMRClaw/src2d
 
-example1: example1.o libforestclaw.a
+example1: example1.o libforestclaw.a $(exampleobjs)
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
 	$(P4EST_LIBS) -o $@
 
