--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 .PHONY: clean examples
 
+
 exampleobjs = \
 	qinit.o \
 	rpn2.o \
@@ -13,8 +14,6 @@ exampleobjs = \
 	b4step2.o \
 	psi.o
 
-
-examples: example1
 
 amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src/philim.o \
@@ -29,7 +28,6 @@ amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src2d/fdisc.o \
 	$(FORESTCLAW)/AMRClaw/src2d/fixcapaq2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/flux2.o \
-	$(FORESTCLAW)/AMRClaw/src2d/flux2fw.o \
 	$(FORESTCLAW)/AMRClaw/src2d/mapc2p.o \
 	$(FORESTCLAW)/AMRClaw/src2d/qad2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/step2.o \
@@ -37,6 +35,9 @@ amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src2d/claw_out2.o
 
 FORT_LIB = -L/usr/local/gfortran/lib -lgfortran
+
+examples: example1
+
 
 libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils.o $(amrclawobjs)
 	ar cru $@ $^
@@ -51,7 +52,7 @@ libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils
 .f.o:
 	$(FC) -Wall -Wno-unused-dummy-argument -c $< -o $@ -I$(FORESTCLAW)/AMRClaw/src2d
 
-example1: example1.o libforestclaw.a $(exampleobjs)
+example1: example1.o libforestclaw.a $(exampleobjs) $(amrclawobjs)
 	$(P4EST_CXX) $(P4EST_CFLAGS) $^ $(P4EST_LDFLAGS) $(FORT_LIB) \
 	$(P4EST_LIBS) -o $@
 
