-- Added call to 'setprob' in amr_forestclaw -- Minor changes to Makefile_lib (got rid of some dependencies that are now handled by example file) -- prototype for 'setprob' in amr_utils.H

--- a/src/Makefile_lib
+++ b/src/Makefile_lib
@@ -5,7 +5,7 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src/ClawPatch.o
 
-libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils.o
+libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils.o $(amrclawobjs)
 	ar cru $@ $^
 
 .c.o:
@@ -16,4 +16,4 @@ libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils
 	-I$(FORESTCLAW)/AMRClaw/src -I. -c $< -o $@
 
 clean:
-	rm -f *.o *.a $(amrclawobjs) $(amrclaw_user)
+	rm -f *.o *.a $(amrclawobjs)
