Add amr_options files

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,8 @@ include $(P4EST_DIR)/etc/Makefile.p4est.mk
 amrclawobjs = \
 	$(FORESTCLAW)/AMRClaw/src/ClawPatch.o
 
-libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o amr_forestclaw.o amr_utils.o $(amrclawobjs)
+libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o \
+        amr_forestclaw.o amr_utils.o amr_options.o $(amrclawobjs)
 	ar cru $@ $^
 
 .c.o:
