--- a/snippets/tst_parser/fclaw.ini
+++ b/snippets/tst_parser/fclaw.ini
@@ -1,9 +1,11 @@
 # The entries under "fclaw" must all be set here.
 
+# Does everything need to be in a section?
+mx = 16        # Grid points in x direction in each grid
+my = 16        # Grid points in y direction in each grid
+
 [fclaw]
     mbc = 2        # Number of ghost cells
-    mx = 16        # Grid points in x direction in each grid
-    my = 16        # Grid points in y direction in each grid
 
     ax = -1
     bx = 1
