--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,9 @@
 include $(P4EST_DIR)/etc/Makefile.p4est.mk
 
 amrclawobjs = \
-	$(FORESTCLAW)/AMRClaw/src/ClawPatch.o
+	$(FORESTCLAW)/AMRClaw/src/ClawPatch.o \
+	$(FORESTCLAW)/AMRClaw/src/parser.o \
+	$(FORESTCLAW)/AMRClaw/src/parse_inputs.o
 
 libforestclaw.a: fclaw2d_convenience.o forestclaw2d.o \
         amr_forestclaw.o amr_utils.o amr_options.o $(amrclawobjs)
