--- a/applications/advection/2d/swirl/fclaw_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw_defaults.ini
@@ -1,16 +1,16 @@
 [Options]
-     mx = 16              # mx_leaf
+     mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     nout = 16            # nout
-     tfinal = 4.0         # tfinal
+     use_fixed_dt = F     # Take a fixed time step
+     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
 
-     initial_dt = 0.02    # Initial time step
+     initial_dt = 0.02    # Initial time step (or fixed time step, if use_fixed_dt = T).
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
      order  = 2 2
-     verbosity = 1        # verbose
+     verbosity = 0        # verbose
      src_term = 0         # src_term
      mcapa = 0            # mcapa
      maux = 2             # maux
@@ -23,8 +23,28 @@
      mthbc = 1 1 1 1      # mthbc(1) (left edge)
 
      manifold = F         # Manifold
+     mapped = F
 
      minlevel = 1         # Minimum level
      maxlevel = 4         # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      subcycle = T         # subcycle in time ( = T or F).
+
+# ----------------------------------------------------------------------------------
+# All output styles below can use either a fixed time step or a variable time step.
+
+[OutputStyle_1]
+# Create nout+1 output files at times  [0,dT_out, 2*dT_out, ..., tfinal], where dT_out = tfinal/nout
+     nout = 10
+     tfinal = 4.0
+
+[OutputStyle_2]
+# Create nout+1 output files at times specified in t_out (T=0 file included by default)
+  nout = 5
+  tout = 0.1 0.34 0.5 0.89 1.1 2.1;
+
+[OutputStyle_3]
+# Output every nstep time steps, for nout total time steps.  Note that nstep must divide nout.
+  nstep = 1
+  nout = 5
