--- a/applications/advection/2d/swirl/fclaw_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw_defaults.ini
@@ -2,10 +2,15 @@
      mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     use_fixed_dt = F     # Take a fixed time step
-     outstyle = 3         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     use_fixed_dt = T     # Take a fixed time step
 
-     initial_dt = 0.02    # Initial time step (or fixed time step, if use_fixed_dt = T).
+     outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
+     nout = 16            # Used for all three out styles;  has different meaning, though.
+     tfinal = 4.0         #
+     nstep = 1            # Only used if outstyle is 3
+
+
+     initial_dt = 0.005    # Initial time step (or fixed time step, if use_fixed_dt = T).
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
@@ -17,19 +22,21 @@
 
      meqn = 1             # meqn
      mwaves = 1           # mwaves
-     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entry)
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
 
      mbc = 2              # mbc
-     mthbc = 1 1 1 1      # mthbc(1) (left edge)
+     mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
      manifold = F         # Manifold
      mapped = F
 
-     minlevel = 1         # Minimum level
-     maxlevel = 4         # Maximum levels of refinement
-     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
+     minlevel = 3         # Minimum level
+     maxlevel = 3         # Maximum levels of refinement
+     regrid_interval = 100  # Regrid every 'regrid_interval' time steps.
 
      subcycle = T         # subcycle in time ( = T or F).
+
+     check_conservation = T
 
 # ----------------------------------------------------------------------------------
 # All output styles below can use either a fixed time step or a variable time step.
@@ -41,7 +48,7 @@
 
 [OutputStyle_2]
 # Create nout+1 output files at times specified in t_out (T=0 file included by default)
-  nout = 5
+  nout = 6
   tout = 0.1 0.34 0.5 0.89 1.1 2.1;
 
 [OutputStyle_3]
