Simplified the time stepping when doing time interpolation

--- a/applications/advection/2d/swirl/fclaw_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw_defaults.ini
@@ -2,25 +2,23 @@
      mx = 16		  # mx_leaf
      my = 16              # my_leaf
 
-     use_fixed_dt = T     # Take a fixed time step
-
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
      nout = 16            # Used for all three out styles;  has different meaning, though.
      tfinal = 4.0         #
      nstep = 1            # Only used if outstyle is 3
 
-
-     initial_dt = 0.005    # Initial time step (or fixed time step, if use_fixed_dt = T).
+     use_fixed_dt = F     # Take a fixed time step
+     initial_dt = 0.005   # Initial time step for 'minlevel'
      max_cfl = 1.0        # maximum cfl
      desired_cfl = 0.9    # desired cfl
 
-     order  = 2 2
+     order  = 2 2         # normal and transverse order
      verbosity = 0        # verbose
      src_term = 0         # src_term
      mcapa = 0            # mcapa
      maux = 2             # maux
 
-     meqn = 1             # meqn
+     meqn = 2             # meqn
      mwaves = 1           # mwaves
      mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
 
@@ -30,13 +28,13 @@
      manifold = F         # Manifold
      mapped = F
 
-     minlevel = 3         # Minimum level
-     maxlevel = 3         # Maximum levels of refinement
-     regrid_interval = 100  # Regrid every 'regrid_interval' time steps.
+     minlevel = 2         # Minimum level
+     maxlevel = 4         # Maximum levels of refinement
+     regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      subcycle = T         # subcycle in time ( = T or F).
 
-     check_conservation = T
+     check_conservation = F
 
 # ----------------------------------------------------------------------------------
 # All output styles below can use either a fixed time step or a variable time step.
