Fixed problem with registering user parms (waveprop_parms, in this case).
Should check to make sure I am using the SC options correctly.

--- a/applications/advection/2d/swirl/fclaw_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw_defaults.ini
@@ -13,19 +13,10 @@
 
      use_fixed_dt = F     # Take a fixed time step
      initial_dt = 0.005   # Initial time step for 'minlevel'
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
 
-     order  = 2 2         # normal and transverse order
      verbosity = 0        # verbose
-     src_term = 0         # src_term
-     mcapa = 0            # mcapa
-     maux = 2             # maux
 
      meqn = 2             # meqn
-     mwaves = 1           # mwaves
-     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
-
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
@@ -35,6 +26,19 @@
      subcycle = T         # subcycle in time ( = T or F).
 
      check_conservation = F
+
+
+# [waveprop]
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+     order  = 2 2         # normal and transverse order
+     mcapa = 0            # mcapa
+     maux = 2             # maux
+     src_term = 0         # src_term
+
+     mwaves = 1           # mwaves
+     mthlim = 4           # mthlim (is a vector in general, with 'mwaves' entries)
 
 # ----------------------------------------------------------------------------------
 # All output styles below can use either a fixed time step or a variable time step.
