Set up constructors/destructors for solver "objects" (using function pointers...)  See amr_waveprop.cpp.
Still have problem with memory deallocation.

--- a/applications/advection/2d/swirl/fclaw_defaults.ini
+++ b/applications/advection/2d/swirl/fclaw_defaults.ini
@@ -7,8 +7,9 @@
      regrid_interval = 1  # Regrid every 'regrid_interval' time steps.
 
      outstyle = 1         # OutputStyle = 1,2,3 (see below, e.g. [OutputStyle_1]
-     nout = 16            # Used for all three out styles;  has different meaning, though.
      tfinal = 4.0         #
+
+     nout = 16            # Used for all three out styles;  has different meaning, though.
      nstep = 1            # Only used if outstyle is 3
 
      use_fixed_dt = F     # Take a fixed time step
@@ -20,6 +21,12 @@
      mbc = 2              # mbc
      mthbc = 1 1 1 1      # mthbc(1) (left edge), etc.
 
+#    Leave these as general parameters, since they may be used by several
+#    hyperbolic solvers
+     max_cfl = 1.0        # maximum cfl
+     desired_cfl = 0.9    # desired cfl
+
+
      manifold = F         # Manifold
      mapped = F
 
@@ -27,11 +34,7 @@
 
      check_conservation = F
 
-
 # [waveprop]
-     max_cfl = 1.0        # maximum cfl
-     desired_cfl = 0.9    # desired cfl
-
      order  = 2 2         # normal and transverse order
      mcapa = 0            # mcapa
      maux = 2             # maux
