Working on naming conventions for solvers.
      -- solver 'link' : Used to set function pointers needed to specify solvers.
      -- patch 'setup' : set any data needed by the solver at the time the patch is created.  This means material properties,
         coefficients, metric terms, etc.
      -- patch 'initialize', 'update', 'physical_bc', have obvious meanings.

--- a/src/Makefile
+++ b/src/Makefile
@@ -26,6 +26,7 @@ fclawobjs = \
 	amr_utils.o \
 	amr_options.o \
 	fclaw2d_convenience.o \
+	fclaw2d_solvers.o \
 	fclaw2d_map.o \
         fclaw2d_p4est.o \
 	forestclaw2d.o
