Organized the reading and setting of parameters so that more than a single group of parameters could be read.
    -- separate files for reading gparms and waveprop_parms;
    -- single file for parsing command line
    -- separate file for postprocessing gparms and waveprop_parms (convert_array stuff)
    -- separate file for doing parameter sanity checks and for setting any parameters that depend
       on file values.

--- a/applications/advection/2d/swirl/Makefile.inc
+++ b/applications/advection/2d/swirl/Makefile.inc
@@ -5,6 +5,12 @@ waveprop := \
 	$(FORESTCLAW)/src/amr_waveprop.o \
 	$(FORESTCLAW)/AMRClaw/src/limiter.o \
 	$(FORESTCLAW)/AMRClaw/src2d/src2.o \
+	$(FORESTCLAW)/AMRClaw/src2d/src2_manifold.o \
+	$(FORESTCLAW)/AMRClaw/src2d/b4step2_manifold.o \
+	$(FORESTCLAW)/AMRClaw/src2d/setaux_manifold.o \
+	$(FORESTCLAW)/AMRClaw/src2d/qinit_manifold.o \
+	$(FORESTCLAW)/AMRClaw/src2d/bc2.o \
+	$(FORESTCLAW)/AMRClaw/src2d/bc2_manifold.o \
 	$(FORESTCLAW)/AMRClaw/src2d/fdisc.o \
 	$(FORESTCLAW)/AMRClaw/src2d/flux2.o \
 	$(FORESTCLAW)/AMRClaw/src2d/qad2.o \
