Moved all routines associated with the wave prop algorithm to src/solvers/amr_waveprop.   This includes many of the fortran routines.

--- a/applications/advection/2d/swirl/Makefile
+++ b/applications/advection/2d/swirl/Makefile
@@ -17,7 +17,7 @@ default: $(TARGET)
 
 .cpp.o:
 	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
-	-I$(FORESTCLAW)/AMRClaw/src -I. -I$(FORESTCLAW)/src/ -c $< -o $@
+	-I$(FORESTCLAW)/AMRClaw/src -I. -I$(FORESTCLAW)/src/ $(solver_includes) -c $< -o $@
 
 .c.o:
 	$(P4EST_CXX) $(P4EST_CFLAGS) $(P4EST_CPPFLAGS) \
