Minor changes to makefiles for swirl and hemisphere.  'Makefile.inc' now only includes files that are in the waveprop solvers.

--- a/applications/advection/2d/hemisphere/Makefile
+++ b/applications/advection/2d/hemisphere/Makefile
@@ -34,6 +34,8 @@ exampleobjs = \
 	ghost_twopatch.o \
 	velocity_wind.o \
 	tag4refinement.o \
+	rpn2noncons.o \
+	rpt2noncons.o \
 	mapc2m.o \
 	$(solver_objs)
 
